<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright(c) 2017 lizhaotailang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinatorLayout"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".mvp.addpackage.AddPackageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:background="@drawable/banner_background_add"
            app:contentScrim="@color/colorPrimary"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:background="@color/colorPrimary"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:scrollbars="vertical"
        android:scrollbarFadeDuration="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fadeScrollbars="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:indeterminate="true" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputLayoutNumber"
                    app:counterEnabled="true"
                    app:counterTextAppearance="@style/InputTextLayoutCounterStyle"
                    app:counterMaxLength="24"
                    app:errorEnabled="true"
                    android:textColorHint="@color/colorSecondaryText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextNumber"
                        android:drawableStart="@drawable/ic_dialpad_black_24dp"
                        android:drawableTint="@color/colorPrimaryText"
                        android:drawablePadding="16dp"
                        android:textColor="@color/colorPrimaryText"
                        android:hint="@string/tint_package_number"
                        android:inputType="textVisiblePassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewScanCode"
                    android:text="@string/scan_code"
                    android:textAllCaps="true"
                    android:layout_gravity="end"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="textEnd"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputLayoutName"
                    app:errorEnabled="true"
                    android:textColorHint="@color/colorSecondaryText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextName"
                        android:textColorHint="@color/colorSecondaryText"
                        android:drawableStart="@drawable/ic_assignment_black_24dp"
                        android:drawableTint="@color/colorPrimaryText"
                        android:textColor="@color/colorPrimaryText"
                        android:drawablePadding="16dp"
                        android:hint="@string/tint_package_name"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/white"
        android:contentDescription="@string/activity_add_package"
        app:srcCompat="@drawable/ic_done_white_24dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:transitionName="fabShare"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>